Bug 246995 - [WebCodecs] an encoder or decoder with being processed content should not be GCed
Summary: [WebCodecs] an encoder or decoder with being processed content should not be ...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Media (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: youenn fablet
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2022-10-25 01:02 PDT by youenn fablet
Modified: 2022-10-26 04:16 PDT (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description youenn fablet 2022-10-25 01:02:08 PDT
[WebCodecs] an encoder or decoder with being processed content should not be GCed
Comment 1 Radar WebKit Bug Importer 2022-10-25 01:02:40 PDT
<rdar://problem/101533086>
Comment 2 youenn fablet 2022-10-25 01:06:17 PDT
Pull request: https://github.com/WebKit/WebKit/pull/5745
Comment 3 EWS 2022-10-26 04:16:30 PDT
Committed 256007@main (856428a7241f): <https://commits.webkit.org/256007@main>

Reviewed commits have been landed. Closing PR #5745 and removing active labels.