[WebCodecs] an encoder or decoder with being processed content should not be GCed https://bugs.webkit.org/show_bug.cgi?id=246995 rdar://problem/101533086

Reviewed by Eric Carlson.

Add a counter for frames/chunks being processed by internal encoders/decoders.
Make sure encoders and decoders are not GCed when the counter is not zero.

* LayoutTests/TestExpectations:
* Source/WebCore/Modules/webcodecs/WebCodecsVideoDecoder.cpp:
(WebCore::WebCodecsVideoDecoder::decode):
(WebCore::WebCodecsVideoDecoder::virtualHasPendingActivity const):
* Source/WebCore/Modules/webcodecs/WebCodecsVideoDecoder.h:
* Source/WebCore/Modules/webcodecs/WebCodecsVideoEncoder.cpp:
(WebCore::WebCodecsVideoEncoder::encode):
(WebCore::WebCodecsVideoEncoder::virtualHasPendingActivity const):
* Source/WebCore/Modules/webcodecs/WebCodecsVideoEncoder.h:

Canonical link: https://commits.webkit.org/256007@main